# pdf_render

./: Cargo.toml
src/: font.rs  lib.rs  render.rs
src/font/: allsorts.rs
src/render/: context.rs  renderer.rs
